--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "firebase": "^8.2.4",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-currency-format": "^1.0.0",
