--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "firebase": "^8.2.4",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "react": "^17.0.1",
