--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
-DBUSER='tungtran'
+DBUSER='root'
 DBHOST='localhost'
-DBDATABASE='csds341'
-DBPASSWORD='mypw'
+DBDATABASE='final341'
+DBPASSWORD='password'
+DBPORT=3306
 PORT=8080
